--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div> -->
                 <div class="tap-list">
-                    <p class="cart-close"><ion-icon name="close-outline"></ion-icon></p>
+                    <p class="cart-closes"><ion-icon name="close-outline"></ion-icon></p>
                     <div class="list-item">
                         <p>Hàng mới</p>
                     </div>
@@ -79,10 +79,10 @@
                         <p>Sale giày</p>
                     </div>
                 </div>      
-                <div class="menu-right">
+                <!-- <div class="menu-right">
                     <button>Login</button>
                     <button>LogUp</button>
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
